--- a/IPCole/styles/test.css
+++ b/IPCole/styles/test.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -6,47 +7,38 @@
         opacity: 1;
     }
 }
+@keyframes baseAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(10vh);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+@keyframes rotate3D {
+    0%{
+        transform: perspective(100vw) rotateY(10deg);
+    }
+    60% {
+        transform: perspective(100vw) rotateY(90deg);
+    }
+    100%{
+        transform: perspective(100vw) rotateY(180deg);
+    }
+}
 @keyframes fadeOut {
     0%{
         opacity: 1;
     }
-    75%{
-        opacity: 0.9;
+    50% {
+        opacity: 0;
+        visibility: hidden;
     }
     100%{
         opacity: 0;
-    }
-}
-@keyframes moveInDown {
-    from{
-        transform: translateY(-40em);
-    }
-    to{
-        transform: translateY(0em);
-    }
-}
-@keyframes moveInUp {
-    from{
-        transform: translateY(40em);
-    }
-    to{
-        transform: translateY(0em);
-    }
-}
-@keyframes moveInLeft {
-    from{
-        transform: translate(40em);
-    }
-    to{
-        transform: translate(0em);
-    }
-}
-@keyframes moveInRight {
-    from{
-        transform: translate(-40em);
-    }
-    to{
-        transform: translate(0em);
+        visibility: hidden;
     }
 }
 
@@ -56,9 +48,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    animation-name: fadeIn;
-    animation-duration: 1s;
     scroll-behavior: smooth;
+    transition: all 0.5s;
+    animation: fadeIn 0.5s;
 } 
 html{
     font-size: 62.5%;
@@ -76,70 +68,114 @@ html, body {
     width: 100%;
 }
 :root{
-    --colorPrimario: #45536d;
-    --colorPrimarioT: rgba(69, 83, 109, 0.9);
+    --colorPrimario: #FFF;
+    --colorPrimarioT: rgba(244, 244, 244, 0.8);
 
-    --colorEnPrimario: #FFFFFF;
-    --colorEnPrimarioT: rgba(244, 244, 244, 0.9);
+    --colorEnPrimario: rgb(22, 22, 55);
+    --colorEnPrimarioT: rgba(22, 22, 55, 0.8);
     
-    --colorSecundario: #af790c;
-    --colorSecundarioT: rgba(175, 121, 12, 0.9);
+    --colorSecundario: #2c2c96;
+    --colorSecundarioT: rgba(44, 44, 150, 0.8);
 
-    --marronClaro: rgb(140, 107, 72);
-    --azulOscuro: rgb(36, 47, 68);
-    --blanco: rgb(255, 255, 255);
+    --texto: clamp(1rem, 0.7153rem + 1.5vw, 1.5rem);
+    --subtitulo: clamp(2.4rem, 0.7153em + 3vw, 3.5rem);
+    --titulo: clamp(3rem, 0.7153rem + 4vw, 5rem);
+    --banner: clamp(4rem, 0.7153rem + 4.5vw, 6.5rem);
 }
 
-/*Fin de estilos generales*/
+/*!Fin de estilos generales*/
 
-/*Estilos de header*/
-
-header {
+header{
+    min-height: 130vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    background-image: url("../res/test/background-test.png");
-}
-header * {
-    color: var(--colorPrimario);
-    margin: 2rem auto;
-}
-header a {
-    background-color: var(--colorPrimario);
-    color: var(--colorEnPrimario);
-    padding: 1.5rem; 
-    font-size: 1.5em;
-    transition: all 0.5s;
-    text-decoration: none;
-    animation-name: moveInDown;
-    animation-duration: 1.5s;
-}
-header a:hover  {
-    font-size: 1.7rem;
-    padding: 1.7rem;
-    background-color: var(--colorPrimarioT);
+    align-items: center;
+    gap: 5vh;
 }
 header h1 {
-    font-size: 4rem;
-    animation-name: moveInRight;
-    animation-duration: 1.5s;
-}
-header h2 {
-    font-size: 2rem;
-    width: 80%;
+    max-width: 85%;
+    font-size: var(--titulo);
+    animation: baseAnimation 1.5s;
     text-align: center;
-    animation-name: moveInLeft;
-    animation-duration: 1.5s;
-    color: var(--colorPrimario);
+    user-select: none;
 }
-#start-button {
-    animation-name: moveInUp;
-    animation-duration: 1.5s;
+header h1 strong {
+    color: var(--colorSecundario);
+}
+.characteristics {
+    margin: 0 auto;
+    width: 90vw;
+    min-height: 80vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 8vw;
+}
+.characteristic{
+    margin: 0 auto;
+    width: 20vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3vh;
+    border: 0.1vh solid rgba(214, 214, 214, 1);
+    border-radius: 4vh;
+    box-shadow: 0.6vh 0.6vh 0.6vh rgba(214, 214, 214, 1);
+    animation: baseAnimation 2s;
+}
+.characteristic:hover {
+    border-width: 0.3vh;
+    box-shadow: 0.8vh 0.8vh 0.8vh rgba(214, 214, 214, 1);
+    transform: translateY(-4vh);
+}
+.characteristic img {
+    max-width: 60%;
+    max-height: 20%;
+}
+.characteristic h2 {
+    font-size: var(--texto);
+    text-align: center;
+    white-space: nowrap;
+}
+.characteristic p{
+    max-width: 80%;
+    font-size: calc(var(--texto)*0.85);
+    text-align: center;
+}
+header a{
+    margin: 2vh auto;
+    width: fit-content;
+    font-size: calc(var(--texto)*0.85);
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05vw;
+    border-radius: 0.5vh;
+    padding: 3vh;
+    font-weight: bold;
+    background-color: var(--colorSecundario);
+    color: var(--colorPrimario);
+    box-shadow: 0.15vw 0.15vh 0.15vw var(--colorEnPrimario);
+    animation: baseAnimation 2.5s;
+}
+header a:hover {
+    cursor: pointer;
+    background-color: rgba(44, 44, 150, 0.85)
+}
+header a:active {
+    cursor: pointer;
+    background-color: rgba(44, 44, 150, 0.85)
+}
+header a:focus {
+    cursor: pointer;
+    background-color: rgba(44, 44, 150, 0.85)
 }
 
-/*Estilos de main*/
+/*!Estilos de main*/
 
 main {
     display: none;
@@ -149,21 +185,21 @@ main {
 }
 .question {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: white;
-    border: 2px solid var(--colorPrimario);
 }
 .text {
     display: flex;
     flex-direction: column;
-    width: 60%;
-    margin: 1rem auto;
-    height: 15vh;
+    width: 100%;
+    margin: 1vh auto;
+    min-height: 15vh;
 }
-.text h1 {
-    color: var(--colorPrimario);
-    margin: 2rem auto;
+.text h2 {
+    max-width: 60%;
+    margin: 2vh auto;
     text-align: center;
+    font-size: calc(var(--texto)*1.5);
 }
 .options {
     margin: 0 auto;
@@ -172,7 +208,8 @@ main {
     display: grid;
     grid-template: 1fr 1fr / 1fr 1fr;
     justify-items: center;
-    gap: 2rem;
+    align-items: center;
+    gap: 2vw;
 }
 .option {
     width: 90%;
@@ -181,23 +218,23 @@ main {
     flex-direction: column;
     justify-content: center;
     transition: all 0.5s;
-    border: 1px solid var(--colorPrimario);
+    border: 0.1vh solid var(--colorEnPrimario);
+    color: var(--colorEnPrimario);
     text-decoration: none;
 }
 .option:hover {
-    padding: 2rem;
-    font-size: 1.2rem;
+    padding: 2vh;
     cursor: pointer;
     width: 85%;
     height: 95%;
 }
-.option:active {
-    border-width: 4px;
+.option:focus {
+    border-width: 2vh;
 }
 .option > span {
-    color: var(--colorPrimario);
+    color: var(--colorEnPrimario);
     margin: 0 auto;
-    font-size: 2em;
+    font-size: calc(var(--texto)*1.2);
 }
 .next-container {
     width: 100vw;
@@ -207,35 +244,70 @@ main {
     justify-content: center;
 }
 .next-button {
-    margin: 1rem auto;
-    color: var(--colorEnPrimario);
+    margin: 2vh auto;
+    width: fit-content;
+    font-size: calc(var(--texto)*0.85);
     text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05vw;
+    border-radius: 0.5vh;
+    padding: 3vh;
+    font-weight: bold;
     background-color: var(--colorPrimario);
-    font-size: 1.5rem;
-    padding: 1.5rem;
+    color: var(--colorSecundario);
+    border: 0.2vh solid var(--colorSecundario);
+    box-shadow: 0.15vw 0.15vh 0.15vw var(--colorSecundarioT);
     transition: all 0.5s;
 }
 .next-button:hover {
-    font-size: 1.7rem;
-    padding: 1.7rem;
-    background-color: var(--colorPrimarioT);
+    background-color: rgba(44, 44, 150, 0.1);
+}
+.next-button:active {
+    background-color: rgba(44, 44, 150, 0.1);
+}
+.next-button:focus {
+    background-color: rgba(44, 44, 150, 0.1);
+}
+.result-button{
+    margin: 2vh auto;
+    width: fit-content;
+    font-size: calc(var(--texto)*0.85);
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05vw;
+    border-radius: 0.5vh;
+    padding: 3vh;
+    font-weight: bold;
+    background-color: var(--colorSecundario);
+    color: var(--colorPrimario);
+    box-shadow: 0.15vw 0.15vh 0.15vw var(--colorEnPrimario);
+    animation: baseAnimation 1.5s;
+}
+.result-button:hover {
+    background-color: rgba(44, 44, 150, 0.85)
+}
+.result-button:active {
+    background-color: rgba(44, 44, 150, 0.85)
+}
+.result-button:focus {
+    background-color: rgba(44, 44, 150, 0.85)
 }
 
 #resultados {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100vw;
     height: 100vh;
 }
-#resultados > h1, h2, div {
+#resultados > h2, #resultados > div {
     margin: 0 auto;
     text-align: center;
     width: 90%;
     color: var(--colorEnPrimario);
 }
-#resultados > h1 {
-    font-size: 2.5rem;
+#resultados > h2 {
+    font-size: calc(var(--texto)*1.5);
     height: 10%;
 }
 #resultados > div {
@@ -252,14 +324,17 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    cursor: pointer;
+    align-items: center;
 }
-.result > div, h1 {
+.result:hover{
+    cursor: pointer;
+    transform: perspective(100vw) rotateY(10deg);
+}
+.result > div {
     margin: 2rem auto;
-    font-size: 2.5rem;
 }
 .per {
-    font-size: 4.5rem;
+    font-size: var(--titulo);
 }
 .bar-c{
     width: 90%;
@@ -279,135 +354,100 @@ main {
     margin: 0;
 }
 
-/*Estilos del footer*/
+.result ul {
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3vh;
+}
+.result ul li {
+    font-size: calc(var(--texto)*0.8);
+    max-width: 80%;
+    overflow-wrap: break-word;
+}
+
+/*!Estilos del footer*/
 
 footer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
+    height: 13vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     background-color: var(--colorEnPrimario);
     color: var(--colorPrimario);
-    border-top: 2px solid var(--colorPrimario);
 }
-footer * {
+footer a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: var(--colorPrimario);
 }
-.footer-left-div{
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
+footer a span {
+    margin: 0 0.5vw;
+    font-size: var(--texto);
+    white-space: nowrap;
 }
-.footer-left-div h3{
-    font-size: 2em;
-    font-weight: bold;
-    margin: 0.5em;
-    padding: 0.5em;
-}
-.footer-left-div div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.footer-left-div > div {
-    display: flex;
-    flex-direction: row;
-}
-.footer-left-div img {
-    max-height: 1.2em;
-    margin: 0 0.5em;
-}
-.footer-left-div span {
-    display: flex;
-    justify-content: center;
-    font-size: 1.5em;
-    margin: 0.5em;
-    padding: 0.5em;
-}
-.footer-right-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-}
-.footer-right-div span {
-    font-size: 1.5em;
-    margin: 0.5em;
-    padding: 0.5em;
+footer a h2 {
+    margin: 0 0.5vw;
+    font-size: var(--subtitulo);
+    color: var(--colorPrimario);
+    font-family: 'Dancing Script';
 }
 
-/*Media queries*/
 
-@media (hover: none) {
-    header {
-      opacity: 1;
-    }
-  }
-@media (max-width: 2100px) {
-    html{
-        font-size: 112.5%;
-    }
+/*!custom scroll bar*/
+
+::-webkit-scrollbar {
+    width: var(--texto);
+ }
+  
+::-webkit-scrollbar-track {
+    background: var(--colorEnPrimario);
+    box-shadow: 5px 0 0 5px var(--colorEnPrimario); 
 }
-@media (max-width: 2000px) {
-    html{
-        font-size: 106.25%;
-    }
+   
+::-webkit-scrollbar-thumb {
+    background: var(--colorSecundario); 
 }
-@media (max-width: 1900px) {
-    html{
-        font-size: 100%;
-    }
+  
+::-webkit-scrollbar-thumb:hover {
+    background: var(--colorSecundarioT); 
 }
-@media (max-width: 1800px) {
-    html{
-        font-size: 93.75%;
-    }
-}
-@media (max-width: 1700px) {
-    html{
-        font-size: 87.5%;
-    }
-}
-@media (max-width: 1600px) {
-    html{
-        font-size: 81.25%;
-    }
-}
-@media (max-width: 1500px) {
-    html{
-        font-size: 75%;
-    }
-}
-@media (max-width: 1400px) {
-    html{
-        font-size: 68.75%;
-    }
-}
-@media (max-width: 1200px) {
-    html{
-        font-size: 56.25%;
-    }
-}
-@media (max-width: 1100px) {
-    html{
-        font-size: 50%;
-    }
-}
-@media (max-width: 1000px) {
-    html{
-        font-size: 43.75%;
-    }
-}
+
+/*!Media queries*/
+
 @media (max-width: 900px) {
-    html{
-        font-size: 37.5%;
+    .characteristic {
+        width: 25vw;
+    }
+    .text h2 {
+        max-width: 80%;
+    }
+    .option {
+        height: 80%;
     }
 }
-@media (max-width: 800px) {
-    html{
-        font-size: 31.25%;
+
+@media (max-width: 720px) {
+    .characteristics {
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr 1fr;
     }
-}
-@media (max-width: 700px) {
-    html{
-        font-size: 25%;
+    .characteristic {
+        width: 80vw;
+        height: 35vh;
+    }
+    #resultados > div {
+        grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    }
+    #resultados {
+        height: 120vh;
     }
 }
