--- a/IPCole/styles/denuncia.css
+++ b/IPCole/styles/denuncia.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@500;700&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -108,6 +109,7 @@ header h1{
     font-size: var(--banner);
     text-align: center;
     white-space: nowrap;
+    font-weight: 500;
 }
 header p{
     margin: 3vh 0;
@@ -131,7 +133,6 @@ header a {
     letter-spacing: 0.05vw;
     border-radius: 0.5vh;
     padding: 3vh;
-    font-weight: bold;
     transition: all 0.5s;
 }
 .denounce-button{
