--- a/IPCole/styles/index.css
+++ b/IPCole/styles/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@500;700&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -60,6 +61,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     transition: all 0.5s;
+    font-weight: 500;
 } 
 html{
     font-size: 62.5%;
@@ -126,39 +128,6 @@ header{
 .header-div-right {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    padding-right: 3vw;
-}
-.h-login {
-    font-size: calc(var(--texto)*0.85);
-    color: var(--colorEnPrimario);
-    text-decoration: none;
-    margin: 0 1vw;
-    white-space: nowrap;
-}
-.h-login:hover {
-    cursor: pointer;
-    text-decoration: underline;
-    transform: translateY(-0.7vh);
-}
-.h-register{
-    font-size: calc(var(--texto)*0.8);
-    font-weight: 600;
-    text-decoration: none;
-    background-color: var(--colorSecundario);
-    color: var(--colorPrimario);
-    padding: calc(var(--texto)*0.7) var(--texto);
-    border-radius: 1vh;
-    letter-spacing: 0.05vw;
-    margin: 0 1vw;
-    white-space: nowrap;
-}
-.h-register:hover {
-    transform: translateY(-0.7vh);
-    background-color: var(--colorSecundarioT);
 }
 
 
@@ -189,7 +158,6 @@ main {
 }
 .ms1-left h1{
     font-size: var(--banner);
-    font-weight: bold;
     margin: 1vh 0;
     white-space: nowrap;
     animation: baseAnimation 1.2s;
@@ -215,7 +183,6 @@ main {
     letter-spacing: 0.05vw;
     border-radius: 0.5vh;
     padding: 3vh;
-    font-weight: bold;
     animation: baseAnimation 1.5s;
 }
 .ms1-left a.denounce-button{
@@ -264,13 +231,11 @@ main {
 .ms2-right h3{
     font-size: var(--texto);
     text-transform: uppercase;
-    font-weight: bold;
     margin: 1vh 0;
     white-space: nowrap;
 }
 .ms2-right h2{
     font-size: var(--banner);
-    font-weight: bold;
     margin: 1vh 0;
     white-space: nowrap;
 }
@@ -291,7 +256,6 @@ main {
     letter-spacing: 0.05vw;
     border-radius: 0.5vh;
     padding: 3vh;
-    font-weight: bold;
     background-color: var(--colorPrimario);
     color: var(--colorSecundario);
     border: 0.2vh solid var(--colorSecundario);
@@ -324,7 +288,6 @@ main {
 .main-section-3 h3 {
     text-transform: uppercase;
     font-size: var(--texto);
-    font-weight: bold;
     margin: 1vh auto;
     white-space: nowrap;
     z-index: 100;
@@ -354,7 +317,6 @@ main {
     letter-spacing: 0.05vw;
     border-radius: 0.5vh;
     padding: 3vh;
-    font-weight: bold;
     background-color: var(--colorPrimario);
     color: var(--colorSecundario);
     border: 0.2vh solid var(--colorSecundario);
