--- a/IPCole/styles/informate.css
+++ b/IPCole/styles/informate.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@500;700&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -50,220 +52,262 @@
     }
 }
 
-/*Fin de animaciones*/
+/*!Fin de animaciones*/
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    animation-name: fadeIn;
-    animation-duration: 1s;
     scroll-behavior: smooth;
 } 
 html{
     font-size: 62.5%;
 }
 body{
+    width: 100vw;
     overflow-x: hidden;
     overflow-y: scroll;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif;
     background-color: var(--colorPrimario);
+}
+body > div {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 12vh;
+    width: 100vw;
 }
 html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
 }
 :root{
-    --colorPrimario: #45536d;
-    --colorPrimarioT: rgba(69, 83, 109, 0.9);
+    --colorPrimario: #FFF;
+    --colorPrimarioT: rgba(244, 244, 244, 0.8);
 
-    --colorEnPrimario: #FFFFFF;
-    --colorEnPrimarioT: rgba(244, 244, 244, 0.9);
+    --colorEnPrimario: rgb(22, 22, 55);
+    --colorEnPrimarioT: rgba(22, 22, 55, 0.5);
     
-    --colorSecundario: #af790c;
-    --colorSecundarioT: rgba(175, 121, 12, 0.9);
+    --colorSecundario: rgb(44, 44, 150);
+    --colorSecundarioT: rgba(44, 44, 150, 0.7);
 
-    --marronClaro: rgb(140, 107, 72);
-    --azulOscuro: rgb(36, 47, 68);
-    --blanco: rgb(255, 255, 255);
+    --texto: clamp(1rem, 0.7153rem + 1.5vw, 1.5rem);
+    --subtitulo: clamp(2.4rem, 0.7153em + 3vw, 3.5rem);
+    --titulo: clamp(3rem, 0.7153rem + 4vw, 5rem);
+    --banner: clamp(4rem, 0.7153rem + 4.5vw, 6.5rem);
 }
 
-/*Fin de estilos generales*/
+/*!Fin de estilos generales*/
 
-/*Estilos de header*/
-
-header {
-    background-image: url("../res/informate/cybercrime.jpg");
-    width: 100vw;
-    height: 100vh;
-    animation-duration: 1s;
-    color: var(--colorEnPrimario);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-header h1, p {
-    opacity: 1;
-    margin: 0 auto;
-    width: fit-content;
-}
-header h1 {
-    font-size: 10em;
-    animation-name: moveInRight;
-    animation-duration: 1s;
-}
-header p {
-    font-size: 2em;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-}
-header p a {
-    color: var(--colorEnPrimario);
-    text-decoration: underline;
-}
-header p a:hover {
-    cursor: pointer;
-    color: var(--colorSecundario);
-}
-header > a {
-    background-color: var(--colorEnPrimario);
-    color: var(--colorPrimario);
-    padding: 0.5em;
-    width: 5vw;
-    margin: 1rem auto;
-    width: 8em;
+header{
+    position: fixed;
+    width: 100%;
+    height: 12vh;
+    background-color: var(--colorPrimario);
     display: flex;
     justify-content: center;
-    text-decoration: none;
-    font-size: 1.5em;
-    transition: padding, 0.5s;
+    align-items: center;
+    padding: 1vh 0;
+    animation: moveInDown 1.5s;
+    z-index: 100;
 }
-header > a:hover {
+header > div {
+    width: 90%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+}
+.header-div-left {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+.header-div-left img {
+    max-height: 8vh;
+    user-select: none;
+}
+.header-div-left h3 {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: calc(var(--subtitulo)*0.8);
+    margin: 0 1vw;
+    user-select: none;
+}
+
+.header-div-right {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 0vw;
+}
+.header-div-right a {
+    font-size: calc(var(--texto)*0.85);
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05vw;
+    border-radius: 0.5vh;
+    padding: 2vh;
+    font-weight: normal;
+    background-color: var(--colorPrimario);
     color: var(--colorSecundario);
-    padding: 1em;
+    border: 0.2vh solid var(--colorSecundario);
+    box-shadow: 0.15vw 0.15vh 0.15vw var(--colorSecundarioT);
+}
+.header-div-right a:hover {
+    background-color: rgba(44, 44, 150, 0.05);
+    box-shadow: 0.15vw 0.15vh 0.15vw var(--colorSecundario);
 }
 
-/*Estilos de main*/
-
-main {
-    background-color: var(--colorEnPrimario);
-    color: var(--colorPrimario);
-    width: 100vw;
-    min-height: 100vh;
-    max-height: 120vh;
+main{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    row-gap: 10vh;
+    column-gap: 1vw;
+    width: 90vw;
+    margin: 2vh auto;
 }
-.article {
-    display: grid;
-    grid-template-rows: repeat(2 1fr);
-    border: 2px solid var(--colorPrimario);
+.article{
+    width: 100%;
+    min-height: 50vh;
+    background-color: var(--colorPrimario);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
-    color: var(--colorPrimario);
-    transition: font-size, 0.5s;
+    text-decoration-color: var(--colorSecundario);
 }
 .article:hover {
+    box-shadow: 0 0 10px #ccc;
     cursor: pointer;
-    text-decoration: underline;
-    font-size: 1.1em;
 }
-.article div {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.article:hover .article-div h3{
+    visibility: visible;
 }
-.text-div {
+.article-div{
+    width: 90%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    color: var(--colorEnPrimario);
+    text-decoration: none;
+}
+.article-div * {
+    width: 100%;
 }
 .article img {
-    max-height: 14em;
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
 }
-.article h1 {
-    font-size: 2.5em;
-    margin: 0.5em;
+.article h4 {
+    margin: 2vh 0;
+    color: var(--colorEnPrimarioT);
+    font-size: calc(var(--texto)*0.8);
+    text-transform: uppercase;
+}
+.article-div p {
+    font-weight: 300;
+}
+.article-div h2 {
+    font-weight: 700;
+}
+.article-div h2, 
+.article-div p, 
+.article-div h3 {
+    font-size: calc(var(--texto)*1.1);
+    margin: 0.5vh 0;
+    line-height: 5vh;
+}
+.article-div h3 {
+    visibility: hidden;
+    animation: fadeIn 0.3s;
+    color: var(--colorSecundario);
+    transition: all 0.5s;
+    width: fit-content;
+    white-space: nowrap;
+    padding: 1vh;
+    font-weight: 100;
+}
+.article-div h3:hover {
+    background-color: rgba(44, 44, 150, 0.1);
+    text-decoration: underline;
+} 
+
+/*!Estilos del footer*/
+
+footer{
+    height: 13vh;
+    width: 100vw;
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    background-color: var(--colorEnPrimario);
+    color: var(--colorPrimario);
 }
-.article p {
-    font-size: 1.2em;
-    margin: 0.5em;
+footer a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--colorPrimario);
+}
+footer a span {
+    margin: 0 0.5vw;
+    font-size: var(--texto);
+    white-space: nowrap;
+}
+footer a h2 {
+    margin: 0 0.5vw;
+    font-size: var(--subtitulo);
+    font-family: 'Dancing Script';
 }
 
-/*Media queries*/
+/*!custom scroll bar*/
 
-@media (max-width: 2100px) {
-    html{
-        font-size: 112.5%;
+::-webkit-scrollbar {
+    width: var(--texto);
+ }
+  
+::-webkit-scrollbar-track {
+    background: var(--colorEnPrimario);
+    box-shadow: 5px 0 0 5px var(--colorEnPrimario); 
+}
+   
+::-webkit-scrollbar-thumb {
+    background: var(--colorSecundario); 
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: var(--colorSecundarioT); 
+}
+
+/*!Media queries*/
+
+@media (max-aspect-ratio: 3/2) {
+    main {
+        grid-template-columns: 1fr 1fr;
     }
 }
-@media (max-width: 2000px) {
-    html{
-        font-size: 106.25%;
+@media (max-aspect-ratio: 3/4) {
+    main{
+        grid-template-columns: 1fr;
     }
 }
-@media (max-width: 1900px) {
-    html{
-        font-size: 100%;
+@media (hover: none) {
+    .article-div h3 {
+        visibility: visible;
     }
-}
-@media (max-width: 1800px) {
-    html{
-        font-size: 93.75%;
-    }
-}
-@media (max-width: 1700px) {
-    html{
-        font-size: 87.5%;
-    }
-}
-@media (max-width: 1600px) {
-    html{
-        font-size: 81.25%;
-    }
-}
-@media (max-width: 1500px) {
-    html{
-        font-size: 75%;
-    }
-}
-@media (max-width: 1400px) {
-    html{
-        font-size: 68.75%;
-    }
-}
-@media (max-width: 1200px) {
-    html{
-        font-size: 56.25%;
-    }
-}
-@media (max-width: 1100px) {
-    html{
-        font-size: 50%;
-    }
-}
-@media (max-width: 1000px) {
-    html{
-        font-size: 43.75%;
-    }
-}
-@media (max-width: 900px) {
-    html{
-        font-size: 37.5%;
-    }
-}
-@media (max-width: 800px) {
-    html{
-        font-size: 31.25%;
-    }
-}
-@media (max-width: 700px) {
-    html{
-        font-size: 25%;
+    .article-div p {
+        line-height: 3vh;
     }
 }
