--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
     }
 }
 
-/*Fin de animaciones*/
+/*!Fin de animaciones*/
 
 *{
     margin: 0;
@@ -75,7 +75,7 @@ body{
     color: var(--colorEnPrimario);
     display: flex;
     flex-direction: column;
-    gap: 30vh;
+    align-items: center;
 }
 html, body {
     margin: 0 auto;
@@ -88,7 +88,7 @@ h1,h2 {
 p, span{
     font-size: var(--texto);
     font-family: 'Nunito', sans-serif;
-    line-height: 4vh;
+    line-height: 30px;
 }
 :root{
     --colorPrimario: rgb(0, 0, 0);
@@ -133,12 +133,24 @@ header {
 
 /*!landing*/
 
+main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30vh;
+    position: relative;
+    top: 12vh;
+}
+main > div {
+    min-height: 88vh;
+}
 .intro {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 70%;
-    height: 110vh;
+    min-height: 88vh;
     margin: 0 auto;
 }
 .intro h2 {
@@ -149,10 +161,25 @@ header {
     white-space: nowrap;
 }
 .intro h1 {
+    position: relative;
     font-size: calc(var(--banner)*1.2);
     margin: 0;
     font-family: sans-serif;
     animation: moveInUp 2s ease-in-out, fadeIn 3.5s;
+}
+.intro h1::before {
+    position: absolute;
+    content: "Alejandro";
+    top: 0;
+    left: 0;
+    background-color: var(--colorSecundario);
+    color: var(--colorPrimario);
+    width: 0%;
+    overflow: hidden;
+    transition: all 0.5s;
+}
+.intro h1:hover::before{
+    width: 100%;
 }
 .intro-text{
     display: flex;
@@ -255,7 +282,6 @@ header {
     color: var(--colorEnPrimario);
     opacity: 0.7;
     font-size: var(--texto);
-    line-height: 4vh;
 }
 
 /*!Habilidades*/
@@ -598,6 +624,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .footer-wrapper{
     display: grid;
@@ -628,7 +655,7 @@ footer{
     text-transform: uppercase;
     color: var(--colorEnPrimario);
     font-family: monospace;
-    width: 40%;
+    width: 70%;
     padding: 2vh 2vh 2vh 0;
     white-space: nowrap;
     text-decoration: none;
@@ -642,7 +669,7 @@ footer{
     margin: 0 auto;
     background-color: var(--colorSecundario);
     height: 0.1vw;
-    width: 40%;
+    width: 70%;
 }
 
 /*!Animaciones*/
@@ -700,7 +727,8 @@ footer{
 
 @media (max-width: 900px) {
     p, span{
-        line-height: 2.5vh !important;
+        line-height: 25px !important;
+        text-align: left !important;
     }
     .intro, .skills, .skill-list, .projects, .career, .contact{
         width: 85%;
@@ -714,6 +742,7 @@ footer{
     }
     .intro p.main-desc {
         max-width: 75%;
+        text-align: center !important;
     }
     .intro-inv, .intro-inv-underline {
         max-width: 70%;
