--- a/IPCole/styles/index.css
+++ b/IPCole/styles/index.css
@@ -515,6 +515,7 @@ footer a h2 {
     margin: 0 0.5vw;
     font-size: var(--subtitulo);
     font-family: 'Dancing Script';
+    font-weight: 700;
 }
 
 
@@ -575,7 +576,7 @@ footer a h2 {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        opacity: 0.2;
+        opacity: 0.1;
     }
 }
 
@@ -605,7 +606,7 @@ footer a h2 {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        opacity: 0.2;
+        opacity: 0.1;
     }
 }
 
