--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,6 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     border: 1p dotted var(--colorSecundario);
-    transition: all 0.5s;
 } 
 html{
     width: 100%;
@@ -89,6 +88,9 @@ p, span{
     font-size: var(--texto);
     font-family: 'Nunito', sans-serif;
     line-height: 30px;
+}
+h1, h2, h3 {
+    user-select: none;
 }
 :root{
     --colorPrimario: rgb(0, 0, 0);
@@ -135,7 +137,7 @@ header {
 /*!landing*/
 
 main{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -209,14 +211,16 @@ main > div {
     white-space: nowrap;
     text-decoration: none;
     animation: invAnimation 3s ease-in;
+    transition: padding 0.5s;
 }
 .intro-inv:hover{
     background-color: rgba(95, 152, 254, 0.05);
     cursor: pointer;
-    padding-left: 1vw;
+    padding-left: 2ch;
 }
 .intro-inv-underline{
     background-color: var(--colorSecundario);
+    font-size: calc(var(--texto)/1.3);
     height: 0.1vw;
     width: 30ch;
     animation: invAnimation 3s ease-in;
@@ -256,7 +260,7 @@ main > div {
     text-transform: uppercase;
     color: var(--colorEnPrimario);
     font-family: monospace;
-    width: 25ch;
+    width: 26ch;
     padding: 2vh 2vh 2vh 0;
     white-space: nowrap;
     text-decoration: none;
@@ -271,14 +275,14 @@ main > div {
 .skills-inv:hover{
     background-color: rgba(95, 152, 254, 0.05);
     cursor: pointer;
-    padding-left: 1vw;
+    padding-left: 2ch;
 }
 .skills-inv-underline{
     margin: 0;
     background-color: var(--colorSecundario);
     font-size: calc(var(--texto)/1.3);
     height: 0.1vw;
-    width: 25ch;
+    width: 26ch;
 }
 .skills-desc {
     display: flex;
@@ -536,7 +540,8 @@ main > div {
     outline: 0 solid var(--colorEnPrimario);
     opacity: 0.6;
     text-decoration: none;
-    transition: none;
+    border-radius: 1vh 1vh 1vh 1vh;
+    opacity: 1;
 }
 .achievement > * {
     margin: 1vh auto;
@@ -566,8 +571,6 @@ main > div {
 .achievement.visible:hover {
     cursor: pointer;
     outline-width: 0.2vw;
-    border-radius: 1vh 1vh 1vh 1vh;
-    opacity: 1;
 }
 .achievement.hidden {
     visibility: hidden;
@@ -619,8 +622,9 @@ main > div {
 }
 .contact-inv:hover{
     background-color: rgba(95, 152, 254, 0.05);
+    font-size: calc(var(--texto)/1.3);
     cursor: pointer;
-    padding-left: 2vw;
+    padding-left: 2ch;
 }
 .contact-inv-underline{
     margin: 0 auto;
@@ -667,11 +671,13 @@ footer{
     padding: 2vh 2vh 2vh 0;
     white-space: nowrap;
     text-decoration: none;
+    transition: all 0.5s;
 }
 .cv-inv:hover{
     background-color: rgba(95, 152, 254, 0.05);
+    font-size: calc(var(--texto)/1.3);
     cursor: pointer;
-    padding-left: 1vw;
+    padding-left: 2ch;
 }
 .cv-inv-underline{
     margin: 0 auto;
@@ -685,9 +691,9 @@ footer{
 .reveal-up{
     transform: translateY(20vh);
     opacity: 0;
-    transition: 1.5s all ease;
 }
 .reveal-up.active-up{
+    transition: transform 1.5s ease, opacity 1.5s ease, padding 0.5s, outline 0.5s;
     transform: translateY(0);
     opacity: 1;
 }
@@ -695,9 +701,9 @@ footer{
 .reveal-right{
     transform: translateX(-10vw);
     opacity: 0;
-    transition: 1.5s all ease;
 }
 .reveal-right.active-right{
+    transition: transform 1.5s ease, opacity 1.5s ease;
     transform: translateX(0);
     opacity: 1;
 }
@@ -705,9 +711,9 @@ footer{
 .reveal-left{
     transform: translateX(10vw);
     opacity: 0;
-    transition: 1.5s all ease;
 }
 .reveal-left.active-left{
+    transition: transform 1.5s ease, opacity 1.5s ease;
     transform: translateX(0);
     opacity: 1;
 }
